SOC-1396 | Discussion editor - fix label on mobile

--- a/front/main/app/styles/component/_discussion-editor.scss
+++ b/front/main/app/styles/component/_discussion-editor.scss
@@ -270,6 +270,10 @@ $modal-editor-top: 66px;
 @media #{$mobile-range} {
 	.discussion-editor {
 		@include modal-editor;
+
+		&.is-active .editor-label {
+			position: fixed;
+		}
 	}
 }
 
